# secp256k1-cpp

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  a.out  build.py  conanfile.py  libsecp256k1.pc.in  main.cpp  secp256k1Config.cmake.in
.github/workflows/: knuth.yml
.travis/: install.sh  push_other_repo.sh
_test_package/: conanfile.py
cmake/: Secp256k1Tools.cmake
helpers/: clone-copy.py  crlf.py
src/: bench_ecmult.c  bench_internal.c  group_impl.h  scalar_low_impl.h  secp256k1.cpp  testrand_impl.h  tests.c  tests.cpp  tests_exhaustive.c
src/modules/schnorr/: main_impl.h  schnorr.h  schnorr_impl.h
test_package/: conanfile.py
